--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -1,35 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        
-  
+
+
   <modelVersion>4.0.0</modelVersion>
-        
-  
+
+
   <groupId>com.example</groupId>
-        
-  
+
+
   <artifactId>Java</artifactId>
-        
-  
+
+
   <version>1.0-SNAPSHOT</version>
-        
-  
+
+
   <packaging>pom</packaging>
-        
-  
+
+
   <modules>
-                
-    
+
+
     <!-- Модули будут добавлены позже -->
-                
-      
-    
-    <module>h264</module>
-          
-    
     <module>cabac</module>
-      
+    <module>EncodingTime</module>
+    <module>PsnrSsimMetrics</module>
+
   </modules>
-    
+
 
 </project>
